--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
 </head>
 
 <body>
+  <script src="scripts/variaveis.js"></script>
+
+  <script src="scripts/cenas/botao.js"></script>
+  <script src="scripts/cenas/cenas.js"></script>
+  
+  <script src="scripts/jogo/load.js"></script>
   <script src="scripts/jogo/pontuacao.js"></script>
   <script src="scripts/jogo/animacao.js"></script>
   <script src="scripts/jogo/inimigo.js"></script>
   <script src="scripts/jogo/personagem.js"></script>
   <script src="scripts/jogo/cenario.js"></script>
+
+  <script src="scripts/cenas/jogo.js"></script>
+  <script src="scripts/cenas/telaInicial.js"></script>
+
   <script src="sketch.js"></script>
 
 
