--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
   <meta charset="utf-8">
 
 </head>
 
 <body>
-  <script src="scripts/variaveis.js"></script>
+    <script src="scripts/variaveis.js"></script>
 
-  <script src="scripts/cenas/botao.js"></script>
+    <script src="scripts/cenas/telaInicial.js"></script>
+    <script src="scripts/cenas/botao.js"></script>
 
-  <script src="scripts/jogo/load.js"></script>
-  <script src="scripts/jogo/pontuacao.js"></script>
-  <script src="scripts/jogo/animacao.js"></script>
-  <script src="scripts/jogo/inimigo.js"></script>
-  <script src="scripts/jogo/personagem.js"></script>
-  <script src="scripts/jogo/cenario.js"></script>
+    <script src="scripts/load.js"></script>
 
-  <script src="scripts/cenas/jogo.js"></script>
-  <script src="scripts/cenas/telaInicial.js"></script>
+    <script src="scripts/cenas/jogo.js"></script>
 
-  <script src="sketch.js"></script>
+    <script src="scripts/jogo/vida.js"></script>
+    <script src="scripts/jogo/pontuacao.js"></script>
+    <script src="scripts/jogo/animacao.js"></script>
+    <script src="scripts/jogo/inimigo.js"></script>
+    <script src="scripts/jogo/personagem.js"></script>
+    <script src="scripts/jogo/cenario.js"></script>
 
+    <script src="sketch.js"></script>
 
 </body>
 
